Explorer: fix background on mobile

--- a/festival/scss/style.scss
+++ b/festival/scss/style.scss
@@ -114,7 +114,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 100% auto;
 
     font-family: Arial, Helvetica, sans-serif;
     color: lightgrey;
